update ui & api_integration

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -95,7 +95,7 @@
   }
 
   .toast-info {
-    background-color: #0056D2 !important;
+    background-color: #625EE8 !important;
     color: white !important;
     border: none !important;
   }
